chore: configure deployment and auto-swagger generation scripts
